fix: text wrap and overflow

--- a/packages/origine2/src/pages/templateEditor/TemplateEditorSidebar/templateEditorSidebar.module.scss
+++ b/packages/origine2/src/pages/templateEditor/TemplateEditorSidebar/templateEditorSidebar.module.scss
@@ -10,12 +10,16 @@
   justify-content: space-between;
   align-items: center;
   padding-bottom: 4px;
+  gap: 0.25rem;
 }
 
 .title {
   flex: 1;
   text-align: right;
   padding-right: 12px;
+  overflow: hidden;
+  text-wrap: nowrap;
+  text-overflow: ellipsis;
 }
 
 .componentTree {
